# bevy-snake

./: Cargo.toml  README.md  justfile
src/: apple.rs  main.rs  player.rs  ui.rs
